module(name = "game_framework_pro", version = "1.1.0")

bazel_dep(name = "platforms",   version = "1.0.0")
bazel_dep(name = "googletest",  version = "1.17.0")

bazel_dep(name = "event_pro")
bazel_dep(name = "state_machine_pro")
bazel_dep(name = "tree_machine_pro")

git_override(
    module_name = "event_pro",
    remote      = "https://github.com/Denis535/Cpp.Libraries.git",
    tag         = "Event.Pro/v1.0.0",
    strip_prefix= "Event.Pro",
)

git_override(
    module_name = "state_machine_pro",
    remote      = "https://github.com/Denis535/Cpp.Libraries.git",
    tag         = "StateMachine.Pro/v1.1.0",
    strip_prefix= "StateMachine.Pro",
)

git_override(
    module_name = "tree_machine_pro",
    remote      = "https://github.com/Denis535/Cpp.Libraries.git",
    tag         = "TreeMachine.Pro/v1.1.0",
    strip_prefix= "TreeMachine.Pro",
)
